@@ -3,6 +3,7 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using System.Threading.Tasks;
+using Omegasis.Revitalize.Framework.Configs.ShopConfigs;
 using Omegasis.Revitalize.Framework.Constants;
 using Omegasis.Revitalize.Framework.Constants.ItemIds.Objects;
 using Omegasis.Revitalize.Framework.Player;
@@ -15,17 +16,34 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
     public static class DwarfShopUtilities
     {
 
-        public static int DwarfShop_NormalGeodesRemainingToday;
-        public static int DwarfShop_FrozenGeodesRemainingToday;
-        public static int DwarfShop_MagmaGeodesRemainingToday;
-        public static int DwarfShop_OmniGeodesRemainingToday;
+        public static int NormalGeodesRemainingToday;
+        public static int FrozenGeodesRemainingToday;
+        public static int MagmaGeodesRemainingToday;
+        public static int OmniGeodesRemainingToday;
 
-
+        /// <summary>
+        /// The number of coal bushes for sale today.
+        /// </summary>
         public static int CoalBushesForSaleToday;
+        /// <summary>
+        /// The number of copper bushes for sale today.
+        /// </summary>
         public static int CopperBushesForSaleToday;
+        /// <summary>
+        /// The number of iron bushes for sale today.
+        /// </summary>
         public static int IronBushesForSaleToday;
+        /// <summary>
+        /// The number of gold bushes for sale today.
+        /// </summary>
         public static int GoldBushesForSaleToday;
+        /// <summary>
+        /// The number of iridium bushes for sale today.
+        /// </summary>
         public static int IridiumBushesForSaleToday;
+        /// <summary>
+        /// The number of radioactive mushes for sale today.
+        /// </summary>
         public static int RadioactiveBushesForSaleToday;
 
 
@@ -38,39 +56,39 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
         /// <param name="args"></param>
         public static void OnNewDay(object sender, StardewModdingAPI.Events.DayStartedEventArgs args)
         {
-            DwarfShop_NormalGeodesRemainingToday = RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.NumberOfNormalGeodesToSell;
+            DwarfShopConfig shopConfig = RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig;
+
+            NormalGeodesRemainingToday = shopConfig.NumberOfNormalGeodesToSell;
             if (Game1.player.deepestMineLevel >= 40)
             {
-                DwarfShop_FrozenGeodesRemainingToday = RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.NumberOfFrozenGeodesToSell;
+                FrozenGeodesRemainingToday = shopConfig.NumberOfFrozenGeodesToSell;
             }
             if (Game1.player.deepestMineLevel >= 80)
             {
-                DwarfShop_MagmaGeodesRemainingToday = RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.NumberOfMagmaGeodesToSell;
+                MagmaGeodesRemainingToday = shopConfig.NumberOfMagmaGeodesToSell;
             }
-            if (Game1.player.hasSkullKey && (Game1.dayOfMonth % 7 == 0 || RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.SellOmniGeodesEveryDayInsteadOnJustSundays))
+            if (Game1.player.hasSkullKey && (Game1.dayOfMonth % 7 == 0 || shopConfig.SellOmniGeodesEveryDayInsteadOnJustSundays))
             {
                 //Add 1 omni geode on sundays.
-                DwarfShop_OmniGeodesRemainingToday = RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.NumberOfOmniGeodesToSell;
+                OmniGeodesRemainingToday = shopConfig.NumberOfOmniGeodesToSell;
             }
             else
             {
-                DwarfShop_OmniGeodesRemainingToday = 0;
+                OmniGeodesRemainingToday = 0;
             }
 
 
-            if (Game1.player.MiningLevel >= 10)
+            if (Game1.player.MiningLevel >= 10 && Game1.player.hasSkullKey)
             {
 
-                int coalChance = Game1.random.Next(101);
-                //25% chance
-                if (coalChance >= 75)
+                double coalChance = (double)Game1.random.Next(101)/100;
+                if (coalChance <=shopConfig.CoalResourceBushSellChance)
                 {
                     CoalBushesForSaleToday = 1;
                 }
 
-                int copperChance = Game1.random.Next(101);
-                //25% chance.
-                if (copperChance >= 75)
+                double copperChance = (double)Game1.random.Next(101)/100;
+                if (copperChance<=shopConfig.CoalResourceBushSellChance)
                 {
                     CopperBushesForSaleToday = 1;
                 }
@@ -78,9 +96,8 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
                 if (Game1.player.deepestMineLevel >= 40)
                 {
 
-                    int ironChance = Game1.random.Next(101);
-                    //20% chance
-                    if (ironChance >= 80)
+                    double ironChance = (double)Game1.random.Next(101) / 100;
+                    if (ironChance <=shopConfig.IronResourceBushSellChance)
                     {
                         IronBushesForSaleToday = 1;
                     }
@@ -88,9 +105,8 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
 
                 if (Game1.player.deepestMineLevel >= 80)
                 {
-                    int goldChance = Game1.random.Next(101);
-                    //20% chance
-                    if (goldChance >= 80)
+                    double goldChance = (double)Game1.random.Next(101) / 100;
+                    if (goldChance <=shopConfig.GoldResourceBushSellChance)
                     {
                         GoldBushesForSaleToday = 1;
                     }
@@ -98,9 +114,8 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
 
                 if (Game1.player.hasSkullKey)
                 {
-                    int iridiumChance = Game1.random.Next(101);
-                    //15% chance.
-                    if (iridiumChance >= 85)
+                    double iridiumChance = (double)Game1.random.Next(101) / 100;
+                    if (iridiumChance <=shopConfig.IrridiumResourceBushSellChance)
                     {
                         IridiumBushesForSaleToday = 1;
                     }
@@ -109,8 +124,8 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
                 //Only sell the radioactive bush if the player has a chance of getting the 'Danger in the Deep' quest.
                 if (PlayerUtilities.GetNumberOfGoldenWalnutsFound() >= 100)
                 {
-                    int radioactiveChance = Game1.random.Next(101);
-                    if (radioactiveChance >= 90)
+                    double radioactiveChance = (double)Game1.random.Next(101) / 100;
+                    if (radioactiveChance <= shopConfig.RadioactiveResourceBushSellChance)
                     {
                         RadioactiveBushesForSaleToday = 1;
                     }
@@ -125,49 +140,51 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
         /// <param name="Menu"></param>
         public static void AddStockToDwarfShop(ShopMenu Menu)
         {
+            DwarfShopConfig shopConfig = RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig;
+
             DwarfShop_DefaultOnPurchaseMethod = Menu.onPurchase;
             Menu.onPurchase = OnPurchaseFromDwarfShop;
 
-            if (DwarfShop_NormalGeodesRemainingToday > 0)
+            if (NormalGeodesRemainingToday > 0)
             {
-               ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.Geode, DwarfShop_NormalGeodesRemainingToday), RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.NormalGeodePrice, DwarfShop_NormalGeodesRemainingToday);
+               ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.Geode, NormalGeodesRemainingToday), shopConfig.NormalGeodePrice, NormalGeodesRemainingToday);
             }
-            if (DwarfShop_FrozenGeodesRemainingToday > 0)
+            if (FrozenGeodesRemainingToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.FrozenGeode, DwarfShop_FrozenGeodesRemainingToday), RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.FrozenGeodePrice, DwarfShop_FrozenGeodesRemainingToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.FrozenGeode, FrozenGeodesRemainingToday), shopConfig.FrozenGeodePrice, FrozenGeodesRemainingToday);
             }
-            if (DwarfShop_MagmaGeodesRemainingToday > 0)
+            if (MagmaGeodesRemainingToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.MagmaGeode, DwarfShop_MagmaGeodesRemainingToday), RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.MagmaGeodePrice, DwarfShop_MagmaGeodesRemainingToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.MagmaGeode, MagmaGeodesRemainingToday), shopConfig.MagmaGeodePrice, MagmaGeodesRemainingToday);
             }
-            if (DwarfShop_OmniGeodesRemainingToday > 0)
+            if (OmniGeodesRemainingToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.OmniGeode, DwarfShop_OmniGeodesRemainingToday), RevitalizeModCore.Configs.shopsConfigManager.dwarfShopConfig.OmniGeodePrice, DwarfShop_OmniGeodesRemainingToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(Enums.SDVObject.OmniGeode, OmniGeodesRemainingToday), shopConfig.OmniGeodePrice, OmniGeodesRemainingToday);
             }
 
             if (CoalBushesForSaleToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.CoalBush), 10_000, CoalBushesForSaleToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.CoalBush), shopConfig.CoalResourceBushSellPrice, CoalBushesForSaleToday);
             }
             if (CopperBushesForSaleToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.CopperOreBush), 5_000, CopperBushesForSaleToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.CopperOreBush), shopConfig.CopperResourceBushSellPrice, CopperBushesForSaleToday);
             }
             if (IronBushesForSaleToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.IronOreBush), 15_000, IronBushesForSaleToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.IronOreBush), shopConfig.IronResourceBushSellPrice, IronBushesForSaleToday);
             }
             if (GoldBushesForSaleToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.GoldOreBush), 20_000, GoldBushesForSaleToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.GoldOreBush), shopConfig.GoldResourceBushSellPrice, GoldBushesForSaleToday);
             }
             if (IridiumBushesForSaleToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.IridiumOreBush), 25_000, IridiumBushesForSaleToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.IridiumOreBush), shopConfig.IridiumResourceBushSellPrice, IridiumBushesForSaleToday);
             }
             if (RadioactiveBushesForSaleToday > 0)
             {
-                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.RadioactiveOreBush), 100_000, RadioactiveBushesForSaleToday);
+                ShopUtilities.AddItemToShop(Menu, RevitalizeModCore.ModContentManager.objectManager.getItem(ResourceObjectIds.RadioactiveOreBush), shopConfig.RadioactiveResourceBushSellPrice, RadioactiveBushesForSaleToday);
             }
 
         }
@@ -185,22 +202,22 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
             ItemReference item = new ItemReference(purchasedItem);
             if (item.SdvObjectId == Enums.SDVObject.Geode)
             {
-                DwarfShop_NormalGeodesRemainingToday -= AmountPurchased;
+                NormalGeodesRemainingToday -= AmountPurchased;
                 return false;
             }
             if (item.SdvObjectId == Enums.SDVObject.FrozenGeode)
             {
-                DwarfShop_FrozenGeodesRemainingToday -= AmountPurchased;
+                FrozenGeodesRemainingToday -= AmountPurchased;
                 return false;
             }
             if (item.SdvObjectId == Enums.SDVObject.MagmaGeode)
             {
-                DwarfShop_MagmaGeodesRemainingToday -= AmountPurchased;
+                MagmaGeodesRemainingToday -= AmountPurchased;
                 return false;
             }
             if (item.SdvObjectId == Enums.SDVObject.OmniGeode)
             {
-                DwarfShop_OmniGeodesRemainingToday -= AmountPurchased;
+                OmniGeodesRemainingToday -= AmountPurchased;
                 return false;
             }
 
