@@ -1,7 +1,7 @@
 {
 	"Revitalize.Objects.Resources.CoalBush":
 	{
-		"displayName":"Coal Ore Bush",
+		"displayName":"Coal Bush",
 		"description":"A magical bush that grows a piece of coal every day!"
 	},
 	"Revitalize.Objects.Resources.CopperOreBush":
